# astro_pi

./: .gitignore  .gitmodules  LICENSE  README.md  astropi.service  main.py  pullToDevice.sh  pullToOrangePi.sh  requirements.txt  setup.py  start.sh  start_sim.bat  start_sim.sh
doc/: architecture diagram.odg  pins.txt
simulation/: .gitignore  CMakeLists.txt  код.docx
simulation/doc/: Pin Color Definitions.odg
simulation/include/: assembly.h  board_orangepi3lts.h  ks_binder.h  ks_service.h  motor.h  pch.h  pin.h  utils.h
simulation/ks_mount_assembly/: Orange Pi 3 LTS.m3d
simulation/src/: assembly.cpp  board_orangepi3lts.cpp  ks_binder.cpp  ks_service.cpp  main.cpp  motor.cpp  pin.cpp
simulation/tests/: gpio_test.cpp  gpio_test.h  test.py
src/: location.py  main.py  server.py  test_28BYJ_48_motor.py  test_gpio.py  test_gpio_logic.py  test_gpiod.py  test_nema17.py  test_opi.py
src/experiments/gpio/: test_28BYJ_48_motor.py  test_nema17.py  test_stepper_motor_gpiod.py
src/gpio/: a4988_motor_controller.py  base_motor_controller.py  motor.py  motor_controller.py  motor_controller_bakup.py  motor_list.py  mouth_eq_controller.py  sim_motor_controller.py  test_28BYJ_48_motor.py  test_motor.py  test_nema17.py  test_stepper_motor_gpiod.py  uln2003_motor_controller.py
src/lx200/: lx200_server.py
src/motor/: motor.py  motor_list.py
src/motor/controller/: a4988_motor_controller.py  motor_controller.py  sim_motor_controller.py  step_motor_controller.py  uln2003_motor_controller.py
src/motor/pins/: a4988_motor_pins.py  motor_pins.py
src/mount/: mount.py  mount_list.py
src/mount/controller/: mount_controller.py  mount_real_controller.py  mount_sim_controller.py
src/mouth/: mouth.py  mouth_list.py  tracking_mode.py
src/mouth/controller/: mouth_controller.py  mouth_eq_controller.py  mouth_real_controller.py  mouth_sim_controller.py
src/nexstar/: commands.py  constants.py  nexstar_server.py  nexstar_utils.py
src/rts2/: rts2HttpServer.py
src/synscan/: synscan_wifi_server.py
src/utils/: app_logger.py  astropi_utils.py  coordinate_utils.py  coords.py  location.py  tracking_mode.py  utils.py
test/: conftest.py
test/utils/: test_coords.py  test_utils.py  utils_test.py
